# vitess-framework-testing

./: .gitignore  .gitmodules  README.md  alltests.sh  lib.sh  main.py  requirements.txt  run.sh  status.ods  test  todo.md
.buildkite/: build-image  build-images  determine-changed-frameworks  docker-compose.mysql57.yml  docker-compose.mysql80.yml  docker-compose.vttestserver57.yml  docker-compose.vttestserver57sharded.yml  docker-compose.vttestserver80.yml  docker-compose.vttestserver80sharded.yml  docker-compose.yml  generate-pipeline  get-changed-files  list-frameworks  pipeline.yml  push-image
.buildkite/hooks/: pre-command
.github/: CODEOWNERS  frameworks.yaml
.github/workflows/: lint.yml  test-all.yml  test-master.yaml  test-master.yml  test.yml
docs/: cli.md  virtualenv.md
go/: test
go/gorm/: Dockerfile  go.mod  main.go  test
haskell/mysql-haskell/: Dockerfile
haskell/mysql-simple/: Dockerfile
haskell/persistent-mysql/src/: MyInit.hs  persistent-mysql.cabal
java/jdbc/: DemoMysqlConnection.java  Dockerfile  compile  test
java/spring/: Dockerfile  test
javascript/sequelize/: app.ts  test
javascript/typeorm/: ormconfig.json  test
php/laravel/: Dockerfile  test
python/: test
python/PyMySQL/: Dockerfile  test  test.py
python/mysqlclient/: test  test.py
python/sqlalchemy/: Dockerfile  run-examples-with-database-url  test
ruby/rails/: Dockerfile  Gemfile  test
rust/: test
rust/mysql/: Dockerfile  test
rust/mysql_async/: Cargo.toml  Dockerfile  test
rust/sqlx/: Dockerfile  test
tools/: clean_tables.sh  compare-frameworks  get-frameworks  list_information.py  run_framework.py
(+233 files in other folders)
